[tool.poetry]
name = "project1-Nikolashin-Oleg-DPO"
version = "0.1.0"
description = "Labyrinth game project by Oleg Nikolashin"
authors = ["oleg-nikolashin@mail.ru"]
readme = "README.md"

packages = [
    { include = "labyrinth_game" },
]

[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[tool.poetry.dependencies]
python = ">=3.13"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
